# RoomieAI

./: .gitignore  README.md  pyproject.toml
roomieai/: ai_brain.py  roomieai.py  transcriber.py  wake_word_detector.py
