[tool.poetry]
name = "roomieai"
version = "1.0.0"
description = "A project focused on giving my roomates another friend in the household."
authors = ["dbstreif <streif.dominic@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyaudio = "^0.2.14"
vosk = "^0.3.45"
fuzzywuzzy = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
