[tool.poetry]
name = "roomieai"
version = "1.0.0"
description = "A project focused on giving my roomates another friend in the household."
authors = ["dbstreif <streif.dominic@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pyaudio = "^0.2.14"
vosk = "^0.3.45"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.27.1"
tts = { version = "^0.22.0", python = ">=3.9,<3.12" }
sounddevice = "^0.5.1"
openai = "^1.70.0"
beepy = "^1.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
